# rlmathtoolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bandits/agents/: base.py  epsilon_greedy.py  gradient.py  ucb.py
bandits/envs/: __init__.py  n_armed_testbed.py
bandits/experiments/: fig_two_one.py  fig_two_three.py  fig_two_two.py
bandits/policies/: __init__.py  ucb.py
bandits/updates/: __init__.py  gradient_pref.py
examples/experiments/: fig_two_three.py
experiments/experiments_02_bandits/: exercise_two_four.py  fig_two_five.py
rlmathtoolkit/bandits/agents/: __init__.py  epsilon_greedy.py  gradient.py  ucb.py
rlmathtoolkit/bandits/envs/: __init__.py  nonstationary_testbed.py
rlmathtoolkit/bandits/policies/: epsilon.py  softmax.py
rlmathtoolkit/bandits/updates/: exponential_recency_weighted_average.py  sample_average.py
rlmathtoolkit/experiments/experiments_02_bandits/: fig_two_five.py
rlmathtoolkit/experiments_bandits/: fig_two_four.py  fig_two_one.py  fig_two_two.py
rlmathtoolkit/mdp/: returns.py
tests/: conftest.py  test_smoke.py
tests/bandits/agents/: test_epsilon_greedy_agent.py
tests/bandits/policies/: test_epsilon.py  test_softmax.py
